# mkdocs-shadcn

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.cjs  tokens.json
.github/workflows/: ci.yml
example/: mkdocs.yml
example/docs/: changelog.md  faq.md  getting-started.md  index.md
example/docs/assets/css/: custom.css
example/docs/assets/js/: custom.js
example/docs/components/: buttons.md  cards.md  index.md
example/docs/guides/: accessibility.md  index.md  theming.md
example/docs/i18n/de/: willkommen.md
example/docs/i18n/fr/: bienvenue.md
example/docs/reference/: components.md  shortcuts.md
mkdocs_shadcn_theme/: __init__.py  formatters.py  theme.yml
mkdocs_shadcn_theme/assets/css/: theme.css
mkdocs_shadcn_theme/assets/icons/: README.txt
mkdocs_shadcn_theme/assets/js/: theme.js
mkdocs_shadcn_theme/templates/: main.html  search.html
mkdocs_shadcn_theme/templates/assets/css/: theme.css
mkdocs_shadcn_theme/templates/assets/js/: theme.js
mkdocs_shadcn_theme/templates/partials/: admonition.html  codeblock.html  command_palette.html  footer.html  header.html  help_overlay.html  nav.html  search.html  toc.html  version_switcher.html
mkdocs_shadcn_theme/templates/static/: README.txt
reports/: a11y.md  lighthouse-budget.json
src-css/: index.css
tests/visual/: README.md
