[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-shadcn-theme"
version = "0.1.0"
description = "A Shadcn-inspired Tailwind theme for MkDocs"
readme = "README.md"
authors = [{name = "MkDocs Shadcn Team"}]
license = {text="MIT"}
dependencies = ["mkdocs>=1.6.0", "mkdocs-minify-plugin (>=0.8.0,<0.9.0)", "mkdocs-redirects (>=1.2.2,<2.0.0)", "mkdocs-git-revision-date-localized-plugin (>=1.4.7,<2.0.0)", "mkdocs-awesome-pages-plugin (>=2.10.1,<3.0.0)", "pymdown-extensions (>=10.16.1,<11.0.0)"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://example.com/mkdocs-shadcn-theme"
Repository = "https://github.com/example/mkdocs-shadcn-theme"
Issues = "https://github.com/example/mkdocs-shadcn-theme/issues"

[project.entry-points."mkdocs.themes"]
shadcn = "mkdocs_shadcn_theme"

[tool.setuptools.package-data]
"mkdocs_shadcn_theme" = [
  "theme.yml",
  "templates/**/*.html",
  "templates/assets/css/*.css",
  "templates/assets/js/*.js",
  "templates/assets/icons/*.svg",
  "templates/static/**/*"
]
